Create entities Order.cs, Product.cs and OrderProduct.cs. Create OrderProductConfiguration.cs. Update AppContext.cs

--- a/Fullstack.Persistance/Fullstack.Persistance.csproj
+++ b/Fullstack.Persistance/Fullstack.Persistance.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fullstack.Domain\Fullstack.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
