Create entity Customer.cs and update Order.cs. Create CustomerConfiguration.cs

--- a/Fullstack.Persistance/Fullstack.Persistance.csproj
+++ b/Fullstack.Persistance/Fullstack.Persistance.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fullstack.ApiService\Fullstack.ApiService.csproj" />
     <ProjectReference Include="..\Fullstack.Domain\Fullstack.Domain.csproj" />
   </ItemGroup>
 
