--- a/Fullstack.Persistance/Fullstack.Persistance.csproj
+++ b/Fullstack.Persistance/Fullstack.Persistance.csproj
@@ -15,4 +15,9 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fullstack.ApiService\Fullstack.ApiService.csproj" />
+    <ProjectReference Include="..\Fullstack.Domain\Fullstack.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
